# sift

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  cliff.toml  release-plz.toml
.github/workflows/: ci.yml  publish-bootstrap.yml  release-plz.yml
assets/: demo.tape  demo_setup.sh
crates/sift-cli/: CHANGELOG.md  Cargo.toml  agent-guide.md
crates/sift-cli/src/: cmd_accept.rs  cmd_ai_help.rs  cmd_diff.rs  cmd_doctor.rs  cmd_export.rs  cmd_fsck.rs  cmd_gc.rs  cmd_history.rs  cmd_init.rs  cmd_list.rs  cmd_log.rs  cmd_mode.rs  cmd_revert.rs  cmd_review.rs  cmd_state.rs  cmd_status.rs  cmd_sweep.rs  main.rs
crates/sift-cli/tests/: cli_e2e.rs  e2e_full_turn.rs
crates/sift-core/: CHANGELOG.md  Cargo.toml
crates/sift-core/src/: agx.rs  config.rs  correlation.rs  diff.rs  entry.rs  export.rs  fsck.rs  gc.rs  lib.rs  paths.rs  policy.rs  session.rs  snapshot.rs  state.rs  store.rs  sweep.rs  world.rs
crates/sift-hook/: CHANGELOG.md  Cargo.toml
crates/sift-hook/src/: main.rs  payload.rs  post_tool.rs  pre_tool.rs  session_start.rs  stop.rs  user_prompt.rs
crates/sift-hook/tests/: cold_start_benchmark.rs  session_lifecycle.rs
crates/sift-tui/: CHANGELOG.md  Cargo.toml
crates/sift-tui/src/: app.rs  events.rs  lib.rs  ui.rs
docs/: agent-guide.md  export-schema.md  suite-conventions.md
docs/superpowers/plans/: 2026-04-12-gc-and-indexed-ledger.md  2026-04-19-phase1-agx-synergy.md  2026-04-19-phase1.7-snapshot-oracle.md  2026-06-19-sift-agent-surface-hardening.md
docs/superpowers/specs/: 2026-06-19-sift-agent-surface-hardening-design.md
launch/: LAUNCH_PLAYBOOK.md  agent_tooling_lists.md  lobsters.md  show_hn.md  terminal_trove.md  twitter.md
