[package]
name = "sift-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sift"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
sift-core = { path = "../sift-core" }
sift-tui = { path = "../sift-tui" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
serde_json.workspace = true
