# `sift-cli` is squatted on crates.io; this user-facing binary crate
# publishes as `sift-tui` (mirrors agx → agx-tui). The installed binary
# is still invoked as `sift` (see [[bin]] below).
[package]
name = "sift-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sift"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
siftcore = { path = "../sift-core", version = "0.1.0" }
sift-render = { path = "../sift-tui", version = "0.1.0" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
