[package]
name = "sift-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ulid.workspace = true
sha1.workspace = true
hex.workspace = true
chrono.workspace = true
similar.workspace = true
globset.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
