[package]
name = "siftcore"
version.workspace = true
edition.workspace = true
license.workspace = true

# `sift-core` is squatted on crates.io, so the package publishes as
# `siftcore`. The lib name stays `sift_core` so every `use sift_core::`
# import across the workspace is untouched.
[lib]
name = "sift_core"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ulid.workspace = true
sha1.workspace = true
hex.workspace = true
chrono.workspace = true
similar.workspace = true
globset.workspace = true
walkdir.workspace = true
serde_yaml_ng.workspace = true

[dev-dependencies]
tempfile.workspace = true
