[package]
name = "sift-hook"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sift-hook"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sift-core = { path = "../sift-core" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
serde_json.workspace = true
