[package]
name = "sift-hook"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sift-hook"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
siftcore = { path = "../sift-core", version = "0.1.0" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
