[package]
name = "sift-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Companion hook binary for sift — records AI-agent file writes into the sift snapshot ledger."
keywords = ["ai", "agent", "git-hook", "snapshot"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sift-hook"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
siftcore = { path = "../sift-core", version = "0.1.0" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
