[package]
name = "sift-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde_json.workspace = true
sift-core = { path = "../sift-core" }

[dev-dependencies]
tempfile.workspace = true
chrono.workspace = true
