# The published binary crate takes the name `sift-tui` (mirrors agx-tui),
# so this internal TUI-rendering lib publishes as `sift-render`. Lib name
# stays `sift_tui` to keep its one `use sift_tui::` consumer untouched.
[package]
name = "sift-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal-UI rendering library for sift, the per-turn snapshot oracle for AI-agent file writes."
keywords = ["ai", "agent", "tui", "ratatui"]
categories = ["command-line-interface"]

[lib]
name = "sift_tui"

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde_json.workspace = true
siftcore = { path = "../sift-core", version = "0.1.1" }

[dev-dependencies]
tempfile.workspace = true
chrono.workspace = true
